# ideas

./: README.md  pyproject.toml
ideas/: hooks.py
ideas/templates/includes/: bottom_cta.html  footer.html  tracking_consent.html
ideas/www/: privacy.html  refunds.html  style.css  terms.html
ideas/www/landing/: index.html
